# server/docs/swagger.yaml
@@ -49,6 +49,8 @@ definitions:
     type: object
   entities.StudyMaterial:
     properties:
+      date:
+        type: string
       file_name:
         type: string
       id:
@@ -69,6 +71,8 @@ definitions:
     type: object
   entities.UpdateStudyMaterial:
     properties:
+      date:
+        type: string
       file_name:
         type: string
       id:
@@ -235,43 +239,6 @@ paths:
       tags:
       - Discipline
   /auth/study-material:
-    delete:
-      consumes:
-      - application/json
-      parameters:
-      - description: ID учебного материала
-        in: query
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entities.Response'
-        "400":
-          description: Некорректный запрос
-          schema:
-            $ref: '#/definitions/entities.Error'
-        "401":
-          description: Ошибка аутентификации
-          schema:
-            $ref: '#/definitions/entities.Error'
-        "403":
-          description: Недостаточно прав
-          schema:
-            $ref: '#/definitions/entities.Error'
-        "500":
-          description: Ошибка на стороне сервера
-          schema:
-            $ref: '#/definitions/entities.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Удаление учебного материала
-      tags:
-      - StudyMaterial
     post:
       consumes:
       - application/json
@@ -354,6 +321,44 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Обновление учебного материала
+      tags:
+      - StudyMaterial
+  /auth/study-material/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID учебного материала
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Response'
+        "400":
+          description: Некорректный запрос
+          schema:
+            $ref: '#/definitions/entities.Error'
+        "401":
+          description: Ошибка аутентификации
+          schema:
+            $ref: '#/definitions/entities.Error'
+        "403":
+          description: Недостаточно прав
+          schema:
+            $ref: '#/definitions/entities.Error'
+        "500":
+          description: Ошибка на стороне сервера
+          schema:
+            $ref: '#/definitions/entities.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Удаление учебного материала
       tags:
       - StudyMaterial
   /auth/study-material/id/{id}:
