# server/internal/api/handler.go
@@ -51,5 +51,11 @@ func (h *Handler) Router() *fiber.App {
 	authGroup.Put("/discipline", h.UpdateDiscipline)
 	authGroup.Delete("/discipline/:id", h.DeleteDiscipline)
 
+	authGroup.Post("/study-material", h.CreateStudyMaterial)
+	authGroup.Get("/study-material", h.GetStudyMaterialsByTeacher)
+	authGroup.Get("/study-material/id/:id", h.GetStudyMaterialByID)
+	authGroup.Put("/study-material", h.UpdateStudyMaterial)
+	authGroup.Delete("/study-material/:id", h.DeleteStudyMaterial)
+
 	return f
 }
